# QRedshift

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  LICENSE.txt  Makefile  README.md
.github/: FUNDING.yml
.github/workflows/: release.yml
scripts/: make_deb.sh
src/: main.c
src/display_servers/: x11_randr.c  x11_randr.h  xcb_randr.c  xcb_randr.h
src/utils/: gamma_ramp.c  gamma_ramp.h
